# construct

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
scenarios/: example.py  monitoring.py
src/construct/: __init__.py  cli.py  config.py  evaluator.py  frame_utils.py  gemini.py  loader.py  models.py  prompt.py  pytest_plugin.py  report.py  runner.py  session.py  video_utils.py  viewer.py  vlm.py
src/construct/evaluators/: __init__.py  composite.py  exact.py  outcome.py  semantic.py
tests/: conftest.py  test_cli.py  test_evaluators.py  test_loader.py  test_models.py  test_runner.py  test_video_utils.py  test_viewer.py
